tests/ui/semigroup/other_type_annotation.stderr
error[E0433]: failed to resolve: could not find `annotation` in `op`
 --> tests/ui/monoid/other_type_annotation.rs:2:10
  |
2 |     op::{annotation::coalesce::Coalesce, Construction},
  |          ^^^^^^^^^^ could not find `annotation` in `op`
